--- a/scripts/debug jax/run_example.ipynb
+++ b/scripts/debug jax/run_example.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import jax\n",
+    "jax.config.update(\"jax_enable_x64\", True)\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "import adaptive_latents as al\n",
@@ -62,7 +64,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "br.h.Q_parts.shape"
+    "fig, axs = plt.subplots(nrows=5, ncols=2, layout='tight', figsize=(10,10), sharey=\"row\")\n",
+    "for i in range(2):\n",
+    "    br = brs[i]\n",
+    "\n",
+    "    log_Q = np.log(np.abs(br.h.Q))\n",
+    "    axs[0,i].plot(log_Q)\n",
+    "    axs[0,i].set_title(f\"{backends[i]} Q\")\n",
+    "    for j in range(0,4):\n",
+    "        axs[j+1,i].plot(np.squeeze(br.h.Q_parts[:, j, :]))\n",
+    "        axs[j+1,i].set_title(f\"{backends[i]} Q_{{{j}}}\")"
    ]
   },
   {
@@ -72,20 +83,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(nrows=5, ncols=2, layout='tight', figsize=(10,10), sharey=\"row\")\n",
-    "for i in range(2):\n",
-    "    br = brs[i]\n",
-    "\n",
-    "    log_Q = np.log(np.abs(br.h.Q))\n",
-    "    axs[0,i].plot(log_Q)\n",
-    "    for j in range(0,4):\n",
-    "        br.h.Q_parts\n",
-    "        axs[j+1,i].plot(np.squeeze(br.h.Q_parts[:, j, :]))"
+    "fig, axs = plt.subplots(nrows=1, ncols=2, squeeze=False, figsize=(10,3))\n",
+    "for i in [0,1]:\n",
+    "    axs[0,i].plot(np.squeeze(brs[i].h.Q_parts[:, 0, :]) + np.squeeze(brs[i].h.Q_parts[:, 1, :]));\n",
+    "    axs[0,i].set_ylim([-200, 10])\n",
+    "    axs[0,i].set_title(f\"{backends[i]} Q_0 + Q_1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(nrows=1, ncols=2, squeeze=False, figsize=(10,3))\n",
+    "for i in [0,1]:\n",
+    "    axs[0,i].plot(np.squeeze(brs[i].h.Q_parts[:, 2, :]) + np.squeeze(brs[i].h.Q_parts[:, 3, :]));\n",
+    "    axs[0,i].set_ylim([-1000, 1000])\n",
+    "    axs[0,i].set_title(f\"{backends[i]} Q_2 + Q_3\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "## alpha"
@@ -94,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## B and pre_B"
@@ -124,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "Note that you can manually suppress B elements beyond 10 but it doesn't help."
@@ -174,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "## logB"
@@ -250,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "## mu"
@@ -304,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "source": [
     "(460, 9.8)\n",
@@ -482,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
