--- a/notebooks/bubblewrap_demo.ipynb
+++ b/notebooks/bubblewrap_demo.ipynb
@@ -11,13 +11,9 @@
     "os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\"\n",
     "\n",
     "import adaptive_latents as al\n",
-    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager, default_rwd_parameters, SymmetricNoisyRegressor, BWRun\n",
-    "import adaptive_latents.input_sources.utils as fin\n",
-    "from scipy.io import loadmat\n",
+    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager, default_rwd_parameters, SemiRegularizedRegressor, BWRun\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.decomposition import PCA\n",
-    "from proSVD import proSVD\n",
     "rng = np.random.default_rng()"
    ]
   },
