--- a/workspace/profiling.ipynb
+++ b/workspace/profiling.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-12T16:11:17.094613Z",
-     "start_time": "2024-11-12T16:11:15.420954Z"
+     "end_time": "2024-11-13T18:57:26.366937Z",
+     "start_time": "2024-11-13T18:57:24.556129Z"
     }
    },
    "outputs": [],
@@ -17,7 +17,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from prediction_regression_run import pred_reg_run_with_defaults"
+    "from prediction_regression_run import pred_reg_run_with_defaults\n",
+    "rng = np.random.default_rng()"
    ]
   },
   {
@@ -26,25 +27,20 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-12T16:20:40.988983Z",
-     "start_time": "2024-11-12T16:11:30.590772Z"
+     "end_time": "2024-11-13T18:57:26.897272Z",
+     "start_time": "2024-11-13T18:57:26.367756Z"
     }
    },
    "outputs": [],
    "source": [
-    "run_without_logging = pred_reg_run_with_defaults('odoherty21', log_level=1)"
+    "run_without_logging = pred_reg_run_with_defaults('leventhal24u', log_level=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-12T16:38:40.886081Z",
-     "start_time": "2024-11-12T16:26:20.850032Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "run_with_logging = pred_reg_run_with_defaults('odoherty21', log_level=2)\n"
@@ -56,13 +52,30 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-12T17:42:19.319317Z",
-     "start_time": "2024-11-12T17:42:18.815310Z"
+     "end_time": "2024-11-13T18:50:59.034132Z",
+     "start_time": "2024-11-13T18:50:59.027572Z"
     }
    },
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "runs_by_bubbles = dict()\n",
+    "\n",
+    "# runs_by_bubbles[800] = pred_reg_run_with_defaults('odoherty21', log_level=1, n_bubbles=800)\n",
+    "# runs_by_bubbles[500] = pred_reg_run_with_defaults('odoherty21', log_level=1, n_bubbles=500)\n",
+    "runs_by_bubbles[1100] = run_without_logging\n",
+    "# runs_by_bubbles[1400] = pred_reg_run_with_defaults('odoherty21', log_level=1, n_bubbles=1400)\n",
+    "# runs_by_bubbles[1700] = pred_reg_run_with_defaults('odoherty21', log_level=1, n_bubbles=1700)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
     "\n",
     "\n",
     "stream_label_mapping = {\n",
@@ -99,7 +112,7 @@
     "        ax.text(0, sampling_dt + .2, f'{sampling_dt:.1f} ms (sampling rate)')\n",
     "\n",
     "\n",
-    "fig, axs = plt.subplots(ncols=2)\n",
+    "fig, axs = plt.subplots(ncols=2, figsize=[15, 5])\n",
     "time_scatter(axs[0], run_without_logging.pipeline, run_without_logging, semilogy=False)\n",
     "time_scatter(axs[1], run_with_logging.pipeline, run_with_logging, semilogy=False)\n",
     "\n"
@@ -108,13 +121,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-12T17:48:25.337330Z",
-     "start_time": "2024-11-12T17:48:24.709102Z"
-    }
-   },
+   "id": "5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -136,8 +144,8 @@
     "            axs[idx,0].hist(sub_a, bins=np.linspace(l,r,101), color=f'C{idx}')\n",
     "            axs[idx,0].semilogy()\n",
     "\n",
-    "        axs[idx,0].axvline(sampling_dt, color='k', lw=1.5, ls='-')\n",
-    "        axs[idx,0].set_xlim([0, sampling_dt*2])\n",
+    "        # axs[idx,0].axvline(sampling_dt, color='k', lw=1.5, ls='-')\n",
+    "        # axs[idx,0].set_xlim([0, sampling_dt*2])\n",
     "\n",
     "    # ax.text(0, q*1.2, f'{q:.1f} ms')\n",
     "    # ax.text(0, sampling_dt*1.2, f'{sampling_dt:.1f} ms (sampling rate)')\n",
@@ -145,19 +153,25 @@
     "    axs[-1,0].set_xlabel('step time (ms)')\n",
     "    \n",
     "run = run_without_logging\n",
-    "row_hist_per_stream(run.pipeline, run)\n"
+    "row_hist_per_stream(run.pipeline.steps[1], run)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-12T17:50:34.015961Z",
-     "start_time": "2024-11-12T17:50:32.444531Z"
-    }
-   },
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "print(run.pipeline.steps[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -181,66 +195,8 @@
     "    axs[0,0].set_title('processing time by step for predictions')\n",
     "    axs[-1,0].set_xlabel('step time (ms)')\n",
     "\n",
+    "run = run_without_logging\n",
     "row_hist_per_step(run.pipeline, run, 0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-12T17:51:12.132574Z",
-     "start_time": "2024-11-12T17:51:12.121418Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "run.pipeline.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-12T20:02:56.310892Z",
-     "start_time": "2024-11-12T20:02:56.282408Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from adaptive_latents import Pipeline, CenteringTransformer, VanillaOnlineRegressor\n",
-    "\n",
-    "x = np.arange(1)[:,None] + 1\n",
-    "y = x + 1\n",
-    "\n",
-    "\n",
-    "centerer = CenteringTransformer()\n",
-    "reg = VanillaOnlineRegressor()\n",
-    "\n",
-    "for x_i, y_i in zip(x,y):\n",
-    "    data, stream = x_i, 0\n",
-    "    data, stream = centerer.partial_fit_transform(data, stream=stream, return_output_stream=True)\n",
-    "    data, stream = reg.partial_fit_transform(data, stream=stream, return_output_stream=True)\n",
-    "\n",
-    "    data, stream = y_i, 1\n",
-    "    data, stream = centerer.partial_fit_transform(data, stream=stream, return_output_stream=True)\n",
-    "    data, stream = reg.partial_fit_transform(data, stream=stream, return_output_stream=True)\n",
-    "\n",
-    "p = Pipeline([\n",
-    "    CenteringTransformer(),\n",
-    "    VanillaOnlineRegressor()\n",
-    "])\n",
-    "\n",
-    "for x_i, y_i in zip(x,y):\n",
-    "    data, stream = x_i, 0\n",
-    "    data, stream = p.partial_fit_transform(data, stream=stream, return_output_stream=True)\n",
-    "    \n",
-    "    data, stream = y_i, 1\n",
-    "    data, stream = p.partial_fit_transform(data, stream=stream, return_output_stream=True)\n",
-    "\n"
    ]
   },
   {
@@ -250,25 +206,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: reg.pft(_,_,True)"
+    "bw_times = al.timed_data_source.ArrayWithTime.from_list(run_without_logging.pipeline.steps[-2].log['step_time'])\n",
+    "reg_times = al.timed_data_source.ArrayWithTime.from_list(run_without_logging.pipeline.steps[-1].log['step_time'])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-12T20:03:03.178531Z",
-     "start_time": "2024-11-12T20:03:03.167552Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print(p.steps[-1].c)\n",
-    "print(reg.c)\n",
-    "\n",
-    "x, y"
+    "%matplotlib qt\n",
+    "fig, ax = plt.subplots()\n",
+    "streams = np.array(run_without_logging.pipeline.steps[-1].log['stream'])\n",
+    "for stream in stream_label_mapping:\n",
+    "    ax.scatter(bw_times[streams==stream], reg_times[streams==stream], s=3)\n",
+    "# ax.semilogy()\n",
+    "# ax.semilogx()\n",
+    "plt.axis('equal')\n"
    ]
   },
   {
@@ -277,80 +233,117 @@
    "id": "10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-12T19:38:26.457937Z",
-     "start_time": "2024-11-12T19:38:26.438678Z"
+     "end_time": "2024-11-13T18:51:04.261268Z",
+     "start_time": "2024-11-13T18:51:04.017806Z"
     }
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "    \n",
     "\n",
-    "from adaptive_latents import Pipeline, CenteringTransformer, VanillaOnlineRegressor\n",
-    "\n",
-    "p = Pipeline([\n",
-    "    CenteringTransformer(),\n",
-    "    VanillaOnlineRegressor()\n",
-    "])\n",
-    "\n",
-    "centerer = CenteringTransformer()\n",
-    "reg = VanillaOnlineRegressor()\n",
-    "\n",
-    "x = np.array([[1]])\n",
-    "y = np.array([[2]])\n",
-    "\n",
-    "output, stream = centerer.partial_fit_transform(x, stream=0, return_output_stream=True)\n",
-    "output, stream = reg.partial_fit_transform(output, stream=stream, return_output_stream=True)\n",
-    "\n",
-    "output, stream = centerer.partial_fit_transform(y, stream=1, return_output_stream=True)\n",
-    "output, stream = reg.partial_fit_transform(output, stream=stream, return_output_stream=True)\n",
-    "\n",
-    "p.partial_fit_transform(x, stream=0)\n",
-    "p.partial_fit_transform(y, stream=1);\n",
-    "\n",
-    "# x = np.array([[1]])\n",
-    "# y = np.array([[2]])\n",
-    "# \n",
-    "# output, stream = centerer.partial_fit_transform(x, stream=0, return_output_stream=True)\n",
-    "# output, stream = reg.partial_fit_transform(output, stream=stream, return_output_stream=True)\n",
-    "# \n",
-    "# output, stream = centerer.partial_fit_transform(y, stream=1, return_output_stream=True)\n",
-    "# output, stream = reg.partial_fit_transform(output, stream=stream, return_output_stream=True)\n",
-    "# \n",
-    "# p.partial_fit_transform(x, stream=0)\n",
-    "# p.partial_fit_transform(y, stream=1);\n",
-    "# \n",
-    "# x = np.array([[3]])\n",
-    "# y = np.array([[4]])\n",
-    "# \n",
-    "# output, stream = centerer.partial_fit_transform(x, stream=0, return_output_stream=True)\n",
-    "# output, stream = reg.partial_fit_transform(output, stream=stream, return_output_stream=True)\n",
-    "# \n",
-    "# output, stream = centerer.partial_fit_transform(y, stream=1, return_output_stream=True)\n",
-    "# output, stream = reg.partial_fit_transform(output, stream=stream, return_output_stream=True)\n",
-    "# \n",
-    "# p.partial_fit_transform(x, stream=0)\n",
-    "# p.partial_fit_transform(y, stream=1);\n"
+    "bubbles = []\n",
+    "times = []\n",
+    "fig, ax = plt.subplots()\n",
+    "for n_bubbles, run in runs_by_bubbles.items():\n",
+    "    transformer = run.pipeline.steps[7]\n",
+    "    step_times = np.array(transformer.log['step_time'])\n",
+    "    streams = np.array(transformer.log['stream'])\n",
+    "    subset_times = step_times[streams==0]\n",
+    "    ax.scatter(n_bubbles + rng.normal(size=subset_times.shape)*2, subset_times * 1000, s=1, color='C0')\n",
+    "    \n",
+    "    \n",
+    "ax.set_ylim([0, 125])\n",
+    "ax.set_xlabel('number of bubbles')\n",
+    "ax.set_ylabel('pipeline time per neural step (ms)')\n",
+    "ax.set_title('Scaling of speed with number of bubbles')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "# Environment comparison"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-12T18:34:32.137420Z",
-     "start_time": "2024-11-12T18:34:32.123390Z"
+     "end_time": "2024-11-20T18:58:26.753983Z",
+     "start_time": "2024-11-20T18:58:25.061194Z"
     }
    },
    "outputs": [],
    "source": [
-    "import sklearn.linear_model\n",
+    "import pickle\n",
+    "import adaptive_latents as al\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-20T19:00:16.836205Z",
+     "start_time": "2024-11-20T19:00:16.826872Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open(al.CONFIG.bwrun_save_path / 'profile.pkl', 'rb') as fhan:\n",
+    "    p_m = pickle.load(fhan)\n",
     "\n",
-    "regressor = sklearn.linear_model.LinearRegression()\n",
-    "regressor.fit(x,y)\n",
+    "with open(al.CONFIG.bwrun_save_path / 'profile_vc.pkl', 'rb') as fhan:\n",
+    "    p_s = pickle.load(fhan)\n",
     "\n",
-    "import sklearn.pipeline\n",
-    "pipeline = sklearn.pipeline.Pipeline([('reg1', regressor)])\n",
-    "pipeline.predict(x)"
+    "with open(al.CONFIG.bwrun_save_path / 'profile_with_stuff.pkl', 'rb') as fhan:\n",
+    "    p_l = pickle.load(fhan)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-20T19:00:20.743802Z",
+     "start_time": "2024-11-20T19:00:20.730480Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p_s.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-20T19:05:02.663688Z",
+     "start_time": "2024-11-20T19:05:02.375049Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "k = 'bubblewrap'\n",
+    "\n",
+    "plt.hist(p_s[k]*1000, np.linspace(0,60,101), label='in virtual console');\n",
+    "plt.hist(p_m[k]*1000, np.linspace(0,60,101), label='command line, after reboot');\n",
+    "plt.hist(p_l[k]*1000, np.linspace(0,60,101), label='jupyter notebook, with other things open');\n",
+    "plt.legend()\n",
+    "# plt.semilogx()\n",
+    "# plt.semilogy()"
    ]
   }
  ],
